prevent event propagation when link double clicked get drive list add link creation timeout(not finished yet) fix drag overlap

--- a/app/webroot/css/desktop-view.less
+++ b/app/webroot/css/desktop-view.less
@@ -13,7 +13,7 @@ body{
     //background: darken(@bg-color, 15%);
     position: relative;
     top:50px;
-    overflow-y : hidden;
+    //overflow-y : hidden;
     .external{
       padding-right:22px;
       background:url(../img/icon-external-link.gif) right center no-repeat;
